--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,12 @@ nav {
   background: #296692 !important;
 }
 
+.brand-logo {
+  font-weight: bold !important;
+  font-size: 30px !important;
+  background: #296692 !important;
+}
+
 nav a,
 nav a:visited {
   background: #296692;
@@ -30,7 +36,7 @@ nav a:not(.selected):hover {
   color: white;
 }
 
-#backgroundnav{
+#backgroundnav, #backgroundmenu{
   background: #296692;
 }
 
