--- a/css/advantages.css
+++ b/css/advantages.css
@@ -44,11 +44,12 @@
     width: 95%;
 }
 
-.icon {
+.material-icons {
     float: right;
     margin-top: -65px;
     margin-right: 2px;
-    max-width: 50px;
+    font-size: 50px !important;
+    color : white;
 }
 
 @media only screen and (max-width: 992px) {
