--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,14 @@
 h1{
   font-size: 3rem;
 }
+h6{
+    font-weight: bold;
+}
+.divider {
+    margin-bottom: 40px;
+    height: 0.5px;
+    background-color: #296692;
+}
 
 /*--------------------Grössenanpassungen-----------------------*/
 
