Textüberlappung mit Bild fixed

--- a/css/style.css
+++ b/css/style.css
@@ -331,3 +331,13 @@ p {
     display: block;
   }
 }
+
+/*-------------------------------------------------------*/
+
+/*----------------CSS für Anwendungsgebiete------------------*/
+
+.anwendungimage {
+  max-width: 100%;
+  height: auto;
+}
+
