--- a/css/style.css
+++ b/css/style.css
@@ -337,7 +337,12 @@ p {
 /*----------------CSS für Anwendungsgebiete------------------*/
 
 .anwendungimage {
-  max-width: 100%;
-  height: auto;
+    max-width: 600px;
+    width: 100%;
+    height: auto;
+    margin-left: -16px;
 }
-
+.anwendungbeschreibung, .anwendung1 {
+    margin-left: -10px;
+    margin-top: -4px;
+}
