--- a/css/style.css
+++ b/css/style.css
@@ -329,7 +329,7 @@ p {
   }
 }
 
-/*----------------CSS für Slideshow------------------*/
+/*----------------CSS für technische Angaben------------------*/
 h3{
     font-size: 18px;
     font-weight: bold;
@@ -337,14 +337,12 @@ h3{
 }
 
 #ueberschrift{
-    background-color: #296692;
-    
+    background-color: #296692;    
     height: 60px;
 }
 h2{
     margin: 1.3rem 0 1.8rem 0;
-    font-size: 18px;
-    font-weight: bold;
+    font-size: 18px;    
     color: white;
 }
 .carousel{
