--- a/css/style.css
+++ b/css/style.css
@@ -351,6 +351,12 @@ h2{
 #ueberschrift1 {
     background-color: #F0F9FF;
     box-shadow: 0px 5px 3px 0px #C9D3DA;
-    height: 100px;
+    height: 80px;
+    margin-bottom: 20px;
+}
+#ueberschrift2 {
+    background-color: #F0F9FF;
+    box-shadow: 0px 5px 3px 0px #C9D3DA;
+    height: 110px;
     margin-bottom: 20px;
 }
