--- a/css/style.css
+++ b/css/style.css
@@ -287,7 +287,7 @@ nav ul.navmid li {
 /*-------------------------------------------------------*/
 
 /*----------------CSS für Vorteile------------------*/
-.circle {
+#vorteile_icons  .circle {
   width: 80px;
   height: 80px;
   background: #296692;
@@ -382,13 +382,13 @@ h2{
 }
 .ueberschrift1 {
     background-color: #F0F9FF;
-    box-shadow: 0px 5px 3px 0px #C9D3DA;
+    box-shadow: 0 5px 3px 0 #C9D3DA;
     height: auto;
     margin-bottom: 20px;
 }
 .ueberschrift2 {
     background-color: #F0F9FF;
-    box-shadow: 0px 5px 3px 0px #C9D3DA;
+    box-shadow: 0 5px 3px 0 #C9D3DA;
     height: auto;
     margin-bottom: 20px;
 }
@@ -396,6 +396,15 @@ h2{
 /*-------------------------------------------------------*/
 
 /*----------------CSS für Alleinstellungsmerkmale------------------*/
+
 #alleinstellungsmerkmaletitle{
   font-weight: bold;
+}
+
+#ueberschrift  h2 {
+    color: black;
+}
+
+#technische_angaben  .titleBox {
+    margin-bottom: 0 !important;
 }
