--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,25 @@
  * Made By MaterializeCSS.com
  */
 
-/*----------------CSS für Footer------------------*/
+/*----------------Allgemeines------------------*/
 
 .fontSizeStandartTitle{
   font-size: 2rem;
 }
+.blogDate{
+  text-align: right;
+}
+
+.blog{
+  margin-bottom: 3rem;
+}
+
+.blogTitleBox{
+  padding: 0.5rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .titleBox{ /*(Titelboxen)*/
   padding: 0.5rem;
   margin-top: 2rem;
@@ -96,6 +110,10 @@ footer.page-footer {
 }
 .blue1.light2{
   background-color: #edf5fa !important;
+}
+
+.blue2{
+  background-color: #82A2B7;
 }
 
 /*-----------------------------------------------------------*/
@@ -208,6 +226,11 @@ nav ul.navmid li {
 /*-------------------------------------------------------*/
 
 /*----------------CSS für Aktuelles------------------*/
+.zurueck{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .blogimageindex {
   width:100%;
   max-width: 600px;
@@ -243,7 +266,7 @@ nav ul.navmid li {
   text-decoration: underline !important;
 }
 .blogtitle {
-  margin-top: -10px;
+  margin-top: -30px;
 }
 
 /*--------------------Grössenanpassungen-----------------------*/
@@ -316,6 +339,14 @@ nav ul.navmid li {
   margin-top: -0.3rem;
   font-size: 50px !important;
   color : white;
+}
+.vorteileSection{
+  padding-bottom: 0.1px;
+}
+.vorteileBox{
+  padding: 0.2rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 /*--------------------Grössenanpassungen-----------------------*/
