Richtiges Startbild einfügen

--- a/components/Start.html
+++ b/components/Start.html
@@ -1,7 +1,9 @@
 <!--Startbildschirm-->
-<div class="container">
+<div class="container center-align">
     <div class="center-align">
-        <img src="img/footer_images/Bild1.png" alt="Kompressor" class="responsive-img">
+        <div class="startBild">
+            <img src="img/start_images/Kompressor.jpg" alt="Kompressor" class="responsive-img">
+        </div>
         <h1 class="center-align blue1-text">Wir reden nicht von Umweltschutz, wir machen Umweltschutz!</h1>
     </div>
 </div>
