Inhalt einfügen (noch nicht fertig)

--- a/components/Alleinstellungsmerkmale.html
+++ b/components/Alleinstellungsmerkmale.html
@@ -5,16 +5,20 @@
 </div>
 <div class="section">
     <div class="container">
-        <h6 id="alleinstellungsmerkmaletitle">Lorem ipsum</h6>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-            et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat.
-            et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat.
-            et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat.</p>
+        <p>In Neufahrzeugen sowie im Modernisierungsmarkt werden heute zunehmend zwei Arten von ölfreien Kompressoren eingesetzt: </p>
+            <ol>
+                <li>
+                    <p>Hubkolbenkompressoren mit den Nachteilen:
+                    großes Bauvolumen, hohes Gewicht, hohes Laufgeräusch, starke mechanische Schwingungen sowie hohe Gasausschubpulsationen.</p>
+                </li>
+                <li>
+                    <p>Scrollkompressoren mit den Nachteilen: hohes Laufgeräusch, erhebliche Schmutzempfindlichkeit,
+                        hohe Schwingungen sowie die kurze Wartungsfristen.</p>
+                </li>
+            </ol>
+        <p>
+            Der AXK800T ist ein zweistufig arbeitender Axial-Schrägscheibenkompressor mit einem einzigartigen Verdichtungsprinzip zur Erzeugung von trockener Druckluft. Der Kompressor vereint die bewährte Trockenlauffähigkeit von Hubkolben- oder Scrollkompressoren mit der hohen Laufruhe von Schrauben- und Vielzellenkompressoren in einem innovativen Lösungskonzept.
+            Die Arbeitskolben arbeiten ohne Pleuel und parallel zur Antriebswelle. Der AXK800T besitzt dadurch keine störenden vertikalen bzw. radialen Eigenschwingungen. Verbunden mit einer Mehrzylindrigkeit bietet der AXK800T eine minimale Gasausschubpulsation zur Schonung nachgeschalteter Komponenten.
+        </p>
     </div>
 </div>
