--- a/components/Start.html
+++ b/components/Start.html
@@ -4,6 +4,8 @@
         <div class="startBild">
             <img src="img/start_images/Kompressor.jpg" alt="Kompressor" class="responsive-img">
         </div>
-        <h1 class="center-align blue1-text">Wir reden nicht von Umweltschutz, wir machen Umweltschutz!</h1>
+        <h1 class="center-align blue1-text">Betriebsstofffreier Axial-Schrägscheibenkompressor AKK800T</h1>
+        <h2 class="center-align blue1-text">EFFEKTIV - TROCKEN - ÖLFREI</h2>
     </div>
 </div>
+
