--- a/components/Anwendungsgebiete.html
+++ b/components/Anwendungsgebiete.html
@@ -14,11 +14,12 @@
                     <img class="anwendungimage" src="img/anwendung_images/Train.png">
                 </div>
                 <div class="col s12 m8 l8">
-                    <h6 class="anwendung1">Für den Eisenbahnen- und Fahrzeuggebrauch</h6>
-                    <p class="anwendungbeschreibung"> Dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
-                        eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. dolor sit
-                        amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
-                        magna aliquyam erat, sed diam voluptua. </p>
+                    <h6 class="anwendung1">Schienenfahrzeuge</h6>
+                    <p class="anwendungbeschreibung">
+                        Der AXK800T wurde speziell für den Einbau in S-, U-Bahnen und Lokomotiven konzipiert;
+                        niedrige Bauhöhe, geringes Gewicht und kleine Reaktionskräfte an den Auflagerpunkten.
+                        Für den Einbau Unterflur, auf dem Dach oder im Fahrzeuginneren genügt ein einfacher Tragrahmen bzw. Konsole. Durch die hohe Laufruhe und die geringe Druckluft- Ausschubpulsation ist der AXK800T auch ein idealer Ersatzkompressor bei Modernisierungen.
+                    </p>
                 </div>
             </div>
 
@@ -29,11 +30,13 @@
                     <img class="anwendungimage" src="img/anwendung_images/werkstatt.png">
                 </div>
                 <div class="col s12 m8 l8">
-                    <h6 class="anwendung1">Für den Werkstattgebrauch</h6>
-                    <p class="anwendungbeschreibung"> Dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
-                        eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. dolor sit
-                        amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
-                        magna aliquyam erat, sed diam voluptua. </p>
+                    <h6 class="anwendung1">Elektro-, Hybrid-, Dieselbusse & Lastkraftwagen</h6>
+                    <p class="anwendungbeschreibung">
+                        In diesem Anwendungsfester werden die Kompressoren üblicherweise direkt vom Antriebsmotor des Fahrzeuges
+                        angetrieben was einen vermeidbaren Energieverbrauch generiert. Der AXK800T kann elektrisch oder hydraulisch
+                        betrieben im Motorraum integriert werden. Die ölfreie Verdichtung von Luft erfordert keine Mindestlaufzeit
+                        des Kompressors zur Vermeidung von Kondensatausfall im Ölsumpf. Der Kompressor läuft nur dann, wenn Druckluft benötigt wird.
+                    </p>
                 </div>
             </div>
 
@@ -44,11 +47,12 @@
                     <img class="anwendungimage" src="img/anwendung_images/Innenausbau.png">
                 </div>
                 <div class="col s12 m8 l8">
-                    <h6 class="anwendung1">Für den Innenausbau und auf der Baustelle</h6>
-                    <p class="anwendungbeschreibung"> Dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
-                        eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. dolor sit
-                        amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
-                        magna aliquyam erat, sed diam voluptua. </p>
+                    <h6 class="anwendung1">Gasverdichter</h6>
+                    <p class="anwendungbeschreibung">
+                        Der Kompressor sowie die gesamte Lagerung ist konstruktionsbedingt hermetisch dicht ausgeführt.
+                        Gasberührende Teile sind nicht aus Buntmetall oder ferritischen Werkstoffen.
+                        Die verdichteten Gase werden nicht durch Betriebsstoffe des Kompressors kontaminiert.
+                    </p>
                 </div>
             </div>
         </div>
