fixed bullet point situation

--- a/components/Vorteile.html
+++ b/components/Vorteile.html
@@ -118,7 +118,6 @@
                 <div class="row">
                     <h4>Betriebs- und Wartungskosten</h4>
                     <p>Ölfreie Drucklufterzeugung mit dem AXK800T heißt:</p>
-                        <ul>
                             <li>
                                 Keine Bevorratung und Entsorgung von Schmieröl, Ölfilter, Luftentölelementen
                             </li>
@@ -143,8 +142,6 @@
                             <li>
                                 Minimaler Aufwand für die Wartung
                             </li>
-                        </ul>
-                    </p>
                 </div>
             </div>
 
@@ -182,19 +179,19 @@
                 <div class="row">
                     <h4>Features</h4>
                     <p>
-                        •	Ölfreie, trockene Verdichtung
-                        •	Luftgekühlt
-                        •	Spritzwasserfest
-                        •	Niedrige Bauhöhe
-                        •	Niedrige End- und Bauteiltemperaturen durch zweistufig Verdichtung mit intensiver Zwischenkühlung
-                        •	Hohe Laufruhe durch runde Zylinderanordnung (keine Pleuel, keine Kurbelwelle)
-                        •	Minimale Vibrationen durch eine ausgewogene Kinematik vom Massen- und Gaskräften
-                        •	Kaltstart ohne Vorheizen; keine Mindestlaufzeiten
-                        •	Dauerlauffest
-                        •	Kein Bevorratung von Schmieröl und Ölfiltern
-                        •	Keine Entsorgung von ölkontaminiertem Druckluftkondensat
-                        •	Umweltfreundlich, Effizient und wirtschaftlich
-                        •	Minimaler Wartungsaufwand
+                    <li>Ölfreie, trockene Verdichtung
+                        <li>Luftgekühlt</li>
+                        <li>Spritzwasserfest</li>
+                        <li>Niedrige Bauhöhe</li>
+                        <li>Niedrige End- und Bauteiltemperaturen durch zweistufig Verdichtung mit intensiver Zwischenkühlung</li>
+                        <li>Hohe Laufruhe durch runde Zylinderanordnung (keine Pleuel, keine Kurbelwelle)</li>
+                        <li>Minimale Vibrationen durch eine ausgewogene Kinematik vom Massen- und Gaskräften</li>
+                        <li>Kaltstart ohne Vorheizen; keine Mindestlaufzeiten</li>
+                        <li>Dauerlauffest</li>
+                        <li>Kein Bevorratung von Schmieröl und Ölfiltern</li>
+                        <li>Keine Entsorgung von ölkontaminiertem Druckluftkondensat</li>
+                        <li>Umweltfreundlich, Effizient und wirtschaftlich</li>
+                        <li>Minimaler Wartungsaufwand</li>
 
                     </p>
                 </div>
