add gitignore, redo bulletpoints because of problem with vorteile-navigation, add ticks for ul

--- a/components/Vorteile.html
+++ b/components/Vorteile.html
@@ -118,30 +118,41 @@
                 <div class="row">
                     <h4>Betriebs- und Wartungskosten</h4>
                     <p>Ölfreie Drucklufterzeugung mit dem AXK800T heißt:</p>
+
+                    <ul>
                             <li>
-                                Keine Bevorratung und Entsorgung von Schmieröl, Ölfilter, Luftentölelementen
+                                <i class="material-icons left green-text">done</i>
+                                <p>Keine Bevorratung und Entsorgung von Schmieröl, Ölfilter, Luftentölelementen</p>
                             </li>
                             <li>
-                                Keine Sammlung, Aufbereitung  und Entsorgung von Druckluftkondensat
+                                <i class="material-icons left green-text">done</i>
+                                <p>Keine Sammlung, Aufbereitung  und Entsorgung von Druckluftkondensat</p>
                             </li>
                             <li>
-                                Keine Reinigungskosten durch Ölkontamination des Bordnetzes bei Filterversagen
+                                <i class="material-icons left green-text">done</i>
+                                <p>Keine Reinigungskosten durch Ölkontamination des Bordnetzes bei Filterversagen</p>
                             </li>
                             <li>
-                                Keine Reinigungskosten infolge Ölleckagen
+                                <i class="material-icons left green-text">done</i>
+                                <p>Keine Reinigungskosten infolge Ölleckagen</p>
                             </li>
                             <li>
-                                Keine Abfall des Drucktaupunktes durch veröltes Lufttrocknungsgranulat
+                                <i class="material-icons left green-text">done</i>
+                                <p>Keine Abfall des Drucktaupunktes durch veröltes Lufttrocknungsgranulat</p>
                             </li>
                             <li>
-                                Erhöhung der Wartungsintervalle des Lufttrocknungsgranulates
+                                <i class="material-icons left green-text">done</i>
+                                <p>Erhöhung der Wartungsintervalle des Lufttrocknungsgranulates</p>
                             </li>
                             <li>
-                                Erhöhung der Fahrzeugnutzlast durch den Entfall von Kondensat- und Pufferbehältern
+                                <i class="material-icons left green-text">done</i>
+                                <p>Erhöhung der Fahrzeugnutzlast durch den Entfall von Kondensat- und Pufferbehältern</p>
                             </li>
                             <li>
-                                Minimaler Aufwand für die Wartung
+                                <i class="material-icons left green-text">done</i>
+                                <p>Minimaler Aufwand für die Wartung</p>
                             </li>
+                    </ul>
                 </div>
             </div>
 
@@ -153,7 +164,7 @@
             </div>
             <div id="vorteil4" class="vorteile">
                 <div class="row">
-                    <h4>Integration in ein Fahrzeug 4</h4>
+                    <h4>Integration in ein Fahrzeug</h4>
                     <p>
                         Die gewichtsoptimierte Kompressor-Motor-Einheit ist bis zum Druckluftanschluss am Druckluftnachkühler
                         ohne Schläuche komplett verrohrt. Nachgeschaltete Komponenten wie Granulat-Trockner können direkt am Ausgang
@@ -179,20 +190,56 @@
                 <div class="row">
                     <h4>Features</h4>
                     <p>
-                    <li>Ölfreie, trockene Verdichtung
-                        <li>Luftgekühlt</li>
-                        <li>Spritzwasserfest</li>
-                        <li>Niedrige Bauhöhe</li>
-                        <li>Niedrige End- und Bauteiltemperaturen durch zweistufig Verdichtung mit intensiver Zwischenkühlung</li>
-                        <li>Hohe Laufruhe durch runde Zylinderanordnung (keine Pleuel, keine Kurbelwelle)</li>
-                        <li>Minimale Vibrationen durch eine ausgewogene Kinematik vom Massen- und Gaskräften</li>
-                        <li>Kaltstart ohne Vorheizen; keine Mindestlaufzeiten</li>
-                        <li>Dauerlauffest</li>
-                        <li>Kein Bevorratung von Schmieröl und Ölfiltern</li>
-                        <li>Keine Entsorgung von ölkontaminiertem Druckluftkondensat</li>
-                        <li>Umweltfreundlich, Effizient und wirtschaftlich</li>
-                        <li>Minimaler Wartungsaufwand</li>
-
+                        <ul>
+                            <li>
+                                <i class="material-icons left green-text">done</i>
+                                <p>Ölfreie, trockene Verdichtung</p>
+                            </li>
+                            <li>
+                                <i class="material-icons left green-text">done</i>
+                                <p>Luftgekühlt</p>
+                            </li>
+                            <li>
+                                <i class="material-icons left green-text">done</i>
+                                <p>Spritzwasserfest</p>
+                            </li>
+                            <li>
+                                <i class="material-icons left green-text">done</i>
+                                <p>Niedrige Bauhöhe</p>
+                            </li>
+                            <li>
+                                <i class="material-icons left green-text">done</i>
+                                <p>Niedrige End- und Bauteiltemperaturen durch zweistufig Verdichtung mit intensiver Zwischenkühlung</p>
+                            </li>
+                            <li>
+                                <i class="material-icons left green-text">done</i>
+                                <p>Hohe Laufruhe durch runde Zylinderanordnung (keine Pleuel, keine Kurbelwelle)</p>
+                            </li>
+                            <li>
+                                <i class="material-icons left green-text">done</i>
+                                <p>Minimale Vibrationen durch eine ausgewogene Kinematik vom Massen- und Gaskräften</p>
+                            </li>
+                            <li>
+                                <i class="material-icons left green-text">done</i>
+                                <p>Kaltstart ohne Vorheizen; keine Mindestlaufzeiten</p>
+                            </li>
+                            <li><i class="material-icons left green-text">done</i>
+                                <p>Dauerlauffest</p>
+                            </li>
+                            <li><i class="material-icons left green-text">done</i>
+                                <p>Kein Bevorratung von Schmieröl und Ölfiltern</p>
+                            </li>
+                            <li><i class="material-icons left green-text">done</i>
+                                <p>Keine Entsorgung von ölkontaminiertem Druckluftkondensat</p>
+                            </li>
+                            <li><i class="material-icons left green-text">done</i>
+                                <p>Umweltfreundlich, Effizient und wirtschaftlich</p>
+                            </li>
+                            <li>
+                                <i class="material-icons left green-text">done</i>
+                                <p>Minimaler Wartungsaufwand</p>
+                            </li>
+                        </ul>
                     </p>
                 </div>
             </div>
