--- a/components/TechnischeAngaben.html
+++ b/components/TechnischeAngaben.html
@@ -28,35 +28,165 @@
 <div id="technische_angaben">
     <div class="section">
         <div class="row">
-            <div class="container blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align">Allgemeine
-                Daten
-            </div>
             <div class="container">
-                <div class="col s6 m6 l6 ueberschrift1">
-                    <h6> Bauart </h6>
-                    <h6> Typ und Grösse </h6>
-                </div>
-                <div class="col s6 m6 l6 ueberschrift1">
-                    <h6> Axial-Shrägscheiben-Kompressor </h6>
-                    <h6> AXK 800-T </h6>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="container blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align">
-                Eigenschaften
-            </div>
-            <div class="container">
-                <div class="col s6 m6 l6 ueberschrift2">
-                    <h6> Vibration und Körperschall </h6>
-                    <h6> Pulsation der Druckluft </h6>
-                    <h6> Geräuschentwicklung </h6>
-                </div>
-                <div class="col s6 m6 l6 ueberschrift2">
-                    <h6> Niedrig / gut </h6>
-                    <h6> Niedrig / gut </h6>
-                    <h6> Niedrig / gut </h6>
-                </div>
+                <table style="width:100%">
+                    <tr>
+                        <th colspan="2" class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align">
+                            Kompressor
+                        </th>
+                    </tr>
+                    <tr>
+                        <td>
+                            Gewicht Kompressor
+                        </td>
+                        <td>
+                            42 kg
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            Gesamtgewicht mit Motor
+                        </td>
+                        <td>
+                            91 kg
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            Ansaugvolumenstrom bei 10 barg
+                        </td>
+                        <td>
+                            850 Liter / min
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            Betriebsüberdruck max.
+                        </td>
+                        <td>
+                            11 barg
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            Drehzahl
+                        </td>
+                        <td>
+                            1465 l/min
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            Betriebsart
+                        </td>
+                        <td>
+                            Start/ Stop max. 40 / Stunde
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            Dauerbetrieb
+                        </td>
+                        <td>
+                            100%
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            Rel. Luftfeuchte
+                        </td>
+                        <td>
+                            100%
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            Umgebungstemperaturen min/ max
+                        </td>
+                        <td>
+                            -50 °C / +50 °C
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            Höhenlage
+                        </td>
+                        <td>
+                            0 bis 1000 m
+                        </td>
+                    </tr>
+                </table>
+
+<!--                Tabelle 2-->
+                <table style="width:100%">
+                    <tr>
+                        <th colspan="2" class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle">
+                            Elektromotor
+                        </th>
+                    </tr>
+                    <tr>
+                        <td>
+                            E-Motor Baugrösse
+                        </td>
+                        <td>
+                            132 M
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            Nennleistung
+                        </td>
+                        <td>
+                            7.5 kW
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            Nennstrom
+                        </td>
+                        <td>
+                            14,7 A
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            Einschaltstrom bei direkter Einschaltung
+                        </td>
+                        <td>
+                            44 A
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            Spannung / Frequenz
+                        </td>
+                        <td>
+                            3x400 VAC / 50 Hz
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            Einschaltung
+                        </td>
+                        <td>
+                            direkt
+                        </td>
+                    </tr>
+                </table>
             </div>
         </div>
     </div>
