richtige Bilder einfügen bzw bereitstellen, korrekte Icons für Vorteile, ACHTUNG Vorteile muss noch gefixt werden!

--- a/components/Anwendungsgebiete.html
+++ b/components/Anwendungsgebiete.html
@@ -11,7 +11,7 @@
             <!--Anwendungsgebiet 1-->
             <div class="row">
                 <div class="col s12 m4 l4">
-                    <img class="anwendungimage" src="img/anwendung_images/Train.png">
+                    <img class="anwendungimage" src="img/anwendung_images/Train2.png">
                 </div>
                 <div class="col s12 m8 l8">
                     <h6 class="anwendung1">Schienenfahrzeuge</h6>
@@ -27,7 +27,7 @@
             <!--Anwendungsgebiet 2-->
             <div class="row">
                 <div class="col s12 m4 l4">
-                    <img class="anwendungimage" src="img/anwendung_images/werkstatt.png">
+                    <img class="anwendungimage" src="img/anwendung_images/trucks.jpg">
                 </div>
                 <div class="col s12 m8 l8">
                     <h6 class="anwendung1">Elektro-, Hybrid-, Dieselbusse & Lastkraftwagen</h6>
@@ -44,7 +44,7 @@
 
             <div class="row">
                 <div class="col s12 m4 l4">
-                    <img class="anwendungimage" src="img/anwendung_images/Innenausbau.png">
+                    <img class="anwendungimage" src="img/anwendung_images/gas.jpg">
                 </div>
                 <div class="col s12 m8 l8">
                     <h6 class="anwendung1">Gasverdichter</h6>
