--- a/components/Vorteile.html
+++ b/components/Vorteile.html
@@ -45,18 +45,23 @@
 
             <!--            Vorteil 1-->
             <div class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align showhide"
-                 onclick='showfunction("umweltschutz", "plus_icon1", "minus_icon1")'> Umweltschutz
+                 onclick='showfunction("umweltschutz", "plus_icon1", "minus_icon1")'> Umweltschonend
                 <i class="material-icons" id="plus_icon1">add</i>
                 <i class="material-icons" id="minus_icon1">remove</i>
             </div>
+
+            <!--            Titel-Balken-->
+            <div class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align">
+                <i class="material-icons">local_florist</i><span> Umweltschonend</span>
+            </div>
+
             <div id="umweltschutz" class="vorteile">
                 <div class="row">
-                    <h4>Umweltschonend</h4>
                     <div class="col s12 l3">
-                        <img class="resizeableimg" src="img/vorteile_images/umweltschutz_berge.png">
+                        <img class="resizeableimg" src="img/vorteile_images/umweltschonend/umweltschutz_berge.png">
                     </div>
                     <div class="col s12 l3">
-                        <img class="resizeableimg" src="img/vorteile_images/umweltschutz_baum.png">
+                        <img class="resizeableimg" src="img/vorteile_images/umweltschonend/umweltschutz_baum.png">
                     </div>
                     <div class="col s12 l6">
                         <p>
@@ -68,7 +73,7 @@
                 </div>
                 <div class="row">
                     <div class="col s12 l3">
-                        <img class="resizeableimg" src="img/vorteile_images/umweltschutz_erde.png">
+                        <img class="resizeableimg" src="img/vorteile_images/umweltschonend/umweltschutz_erde.png">
                     </div>
                     <div class="col s12 l6">
                         <p>
@@ -80,20 +85,25 @@
                         </p>
                     </div>
                     <div class="col s12 l3">
-                        <img class="resizeableimg" src="img/vorteile_images/umweltschutz_lampe.png">
+                        <img class="resizeableimg" src="img/vorteile_images/umweltschonend/umweltschutz_lampe.png">
                     </div>
                 </div>
             </div>
 
             <!--            Vorteil 2-->
             <div class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align showhide"
-                 onclick='showfunction("vorteil2", "plus_icon2", "minus_icon2")'> Vorteil 2
+                 onclick='showfunction("vorteil2", "plus_icon2", "minus_icon2")'> Energieeffizient
                 <i class="material-icons" id="plus_icon2">add</i>
                 <i class="material-icons" id="minus_icon2">remove</i>
             </div>
+
+            <!--            Titel-Balken-->
+            <div class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align">
+                <i class="material-icons">power</i><span> Energieeffizient</span>
+            </div>
+
             <div id="vorteil2" class="vorteile">
                 <div class="row">
-                    <h4>Energieeffizient</h4>
                     <p>
                         Der AXK800T verdichtet effizient in zwei Stufen.
                         Nach der Komprimierung in der Niederdruckstufe erfolgt eine intensive Zwischenkühlung der Luft.
@@ -110,13 +120,18 @@
 
             <!--            Vorteil 3-->
             <div class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align showhide"
-                 onclick='showfunction("vorteil3", "plus_icon3", "minus_icon3")'> Vorteil 3
+                 onclick='showfunction("vorteil3", "plus_icon3", "minus_icon3")'>Betriebs- und Wartungskosten
                 <i class="material-icons" id="plus_icon3">add</i>
                 <i class="material-icons" id="minus_icon3">remove</i>
             </div>
+
+            <!--            Titel-Balken-->
+            <div class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align">
+                <i class="material-icons">build</i><span> Betriebs- und Wartungskosten</span>
+            </div>
+
             <div id="vorteil3" class="vorteile">
                 <div class="row">
-                    <h4>Betriebs- und Wartungskosten</h4>
                     <p>Ölfreie Drucklufterzeugung mit dem AXK800T heißt:</p>
 
                     <ul>
@@ -157,14 +172,22 @@
             </div>
 
             <!--            Vorteil 4-->
+
             <div class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align showhide"
-                 onclick='showfunction("vorteil4", "plus_icon4", "minus_icon4")'> Vorteil 4
+                 onclick='showfunction("vorteil4", "plus_icon4", "minus_icon4")'>
+                <i class="material-icons left">directions_bus</i> Integration in ein Fahrzeug
                 <i class="material-icons" id="plus_icon4">add</i>
                 <i class="material-icons" id="minus_icon4">remove</i>
             </div>
+
+
+<!--            Titel-Balken-->
+            <div class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align">
+                <i class="material-icons">directions_bus</i><span> Integration in ein Fahrzeug</span>
+            </div>
+
             <div id="vorteil4" class="vorteile">
                 <div class="row">
-                    <h4>Integration in ein Fahrzeug</h4>
                     <p>
                         Die gewichtsoptimierte Kompressor-Motor-Einheit ist bis zum Druckluftanschluss am Druckluftnachkühler
                         ohne Schläuche komplett verrohrt. Nachgeschaltete Komponenten wie Granulat-Trockner können direkt am Ausgang
@@ -182,13 +205,18 @@
 
             <!--            Vorteil 5-->
             <div class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align showhide"
-                 onclick='showfunction("vorteil5", "plus_icon5", "minus_icon5")'> Vorteil 5
+                 onclick='showfunction("vorteil5", "plus_icon5", "minus_icon5")'>Features
                 <i class="material-icons" id="plus_icon5">add</i>
                 <i class="material-icons" id="minus_icon5">remove</i>
             </div>
+
+            <!--            Titel-Balken-->
+            <div class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align">
+                <i class="material-icons">star</i><span> Features</span>
+            </div>
+
             <div id="vorteil5" class="vorteile">
                 <div class="row">
-                    <h4>Features</h4>
                     <p>
                         <ul>
                             <li>
@@ -246,16 +274,22 @@
 
             <!--            Vorteil 6-->
             <div class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align showhide"
-                 onclick='showfunction("vorteil6", "plus_icon6", "minus_icon6")'> Vorteil 6
+                 onclick='showfunction("vorteil6", "plus_icon6", "minus_icon6")'>Vergleich
                 <i class="material-icons" id="plus_icon6">add</i>
                 <i class="material-icons" id="minus_icon6">remove</i>
             </div>
+
+            <!--            Titel-Balken-->
+            <div class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align">
+                <i class="material-icons">bar_chart</i><span> Vergleich</span>
+            </div>
+
             <div id="vorteil6" class="vorteile">
                 <div class="row">
-                    <h4>Vergleich des AXK800T mit vorhandenen Kompressorbauarten</h4>
                     <p>
+                        Der AXK800T im Vergleich zu vorhandenen Kompressorbauarten
                     <div class="vollBild">
-                        <img class="resizeableimg" src="img/vorteile_images/vergleich_tabelle.jpg">
+                        <img class="resizeableimg" src="img/vorteile_images/vergleich/vergleich_tabelle.jpg">
                     </div>
                     </p>
                 </div>
