--- a/components/Alleinstellungsmerkmale.html
+++ b/components/Alleinstellungsmerkmale.html
@@ -6,16 +6,18 @@
 <div class="section">
     <div class="container">
         <p>In Neufahrzeugen sowie im Modernisierungsmarkt werden heute zunehmend zwei Arten von ölfreien Kompressoren eingesetzt: </p>
-            <ol>
+            <ul>
                 <li>
+                    <i class="material-icons left">arrow_right_alt</i>
                     <p>Hubkolbenkompressoren mit den Nachteilen:
                     großes Bauvolumen, hohes Gewicht, hohes Laufgeräusch, starke mechanische Schwingungen sowie hohe Gasausschubpulsationen.</p>
                 </li>
                 <li>
+                    <i class="material-icons left">arrow_right_alt</i>
                     <p>Scrollkompressoren mit den Nachteilen: hohes Laufgeräusch, erhebliche Schmutzempfindlichkeit,
                         hohe Schwingungen sowie die kurze Wartungsfristen.</p>
                 </li>
-            </ol>
+            </ul>
         <p>
             Der AXK800T ist ein zweistufig arbeitender Axial-Schrägscheibenkompressor mit einem einzigartigen Verdichtungsprinzip zur Erzeugung von trockener Druckluft. Der Kompressor vereint die bewährte Trockenlauffähigkeit von Hubkolben- oder Scrollkompressoren mit der hohen Laufruhe von Schrauben- und Vielzellenkompressoren in einem innovativen Lösungskonzept.
             Die Arbeitskolben arbeiten ohne Pleuel und parallel zur Antriebswelle. Der AXK800T besitzt dadurch keine störenden vertikalen bzw. radialen Eigenschwingungen. Verbunden mit einer Mehrzylindrigkeit bietet der AXK800T eine minimale Gasausschubpulsation zur Schonung nachgeschalteter Komponenten.
